--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
-                    <li class="btn"><a href="#">Inizia</a></li>
                 </ul>
+                <span>
+                    <a href="#" class="btn btn-blue">Inizia</a>
+                </span>
             </nav>
         </section>
     </header>
