--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
     <!-- FONT AWESOME -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css' integrity='sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==' crossorigin='anonymous'/>
 
@@ -31,6 +31,7 @@
                 <ul class="d-flex">
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <!-- TODO: ACCEDI IN HOVER DIVENTA GRIGIO -->
                     <li><a href="#">Accedi</a></li>
                 </ul>
                 <span>
@@ -44,6 +45,37 @@
 
     <!-- MAIN -->
         <main>
+
+            <section class="jumbotron d-flex">
+                <div class="big-container">
+                    <!-- h1 -->
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                    <!-- testo e img -->
+                    <div class="item-j d-flex">
+                        <div class="jumbo-text">
+                            <div>
+                                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                                Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente eintegrato per ottimizzare il flusso di lavoro esistente.
+                                </p>
+                            </div>
+                            <!-- bottone prova gratuita -->
+                            <div>
+                                <a href="#" class="btn btn-blue">Inizia la prova gratuita</a>
+                            </div>
+                            <div>
+                                <p>Annulla in qualsiasi momento</p>
+                            </div>
+                            <!-- freccia -->
+                            <div class="freccia">
+                                <i class="fa-solid fa-arrow-down"></i>
+                            </div>
+                        </div>
+                        <div class="jumbo-img">
+                            <img src="img/jumbo.png" alt="img jumbo">
+                        </div>
+                    </div>
+                </div>
+            </section>
             
         </main>
     <!-- /MAIN -->
