[add] box cards [fix] responsive

--- a/index.html
+++ b/index.html
@@ -80,10 +80,56 @@
 
             <!-- PLANES CARD -->
             <section class="main-container debug">
-                <section class="">
+                <section class="plans">
+                    <div>
+                        <!-- titolo piani business -->
+                        <h2>Trova il piano business che fa per te</h2>
+                    </div>
 
+                    <!-- fatturazione -->
+                    <div class="check-radio d-flex">
+                        <span>
+                            <input type="radio" name="fatturazione">
+                            Fatturazione mensile
+                        </span>
+                        <span>
+                            <input type="radio" name="fatturazione">
+                            Fatturazione annuale
+                        </span>
+                    </div>
+                    <!-- /fatturazione -->
+                    <!-- cards -->
+                    <div class="box-cards d-flex">
+                        <!-- card 1 -->
+                        <div class="card">
+                            <!-- TOP CARD -->
+                            <div class="top-card">
+                                <span><i class="fa-solid fa-user"></i></span>
+                                <span>Singolo</span>
+                            </div>
+                            <!-- /TOP CARD -->
+                            <!-- MAIN CARD -->
+                            <div class="body-card d-flex">
+                                <h3>Professional</h3>
+                                <span class="plan-price">&euro; 12.00</span>
+                                <span class="plan-pay">/mese</span>
+                            </div>
+                            <!-- MAIN CARD -->
+                        </div>
+                        <!-- /card 1 -->
+                        <!-- card 2 -->
+                        <div class="card">
+
+                        </div>
+                        <!-- /card 2 -->
+                        <!-- card 3 -->
+                        <div class="card">
+
+                        </div>
+                        <!-- /card 3 -->
+                    </div>
+                    <!-- /cards -->
                 </section>
-
             </section>
             
             
