[fix] jumbotron e input radio in box-cards

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                     <!-- fatturazione -->
                     <div class="check-radio d-flex">
                         <span>
-                            <input type="radio" name="fatturazione">
-                            Fatturazione mensile
+                            <div class="check-fatturazione check-active"></div>
+                            <span>Fatturazione mensile</span>
                         </span>
                         <span>
-                            <input type="radio" name="fatturazione">
-                            Fatturazione annuale
+                            <div class="check-fatturazione"></div>
+                            <span>Fatturazione annuale</span>
                         </span>
                     </div>
                     <!-- /fatturazione -->
