[add] body cards

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- /JUMBOTRON -->
 
             <!-- PLANES CARD -->
-            <section class="main-container debug">
+            <section class="main-container">
                 <section class="plans">
                     <div>
                         <!-- titolo piani business -->
@@ -110,9 +110,54 @@
                             <!-- /TOP CARD -->
                             <!-- MAIN CARD -->
                             <div class="body-card d-flex">
-                                <h3>Professional</h3>
-                                <span class="plan-price">&euro; 12.00</span>
-                                <span class="plan-pay">/mese</span>
+                                <!-- TOP-BODY -->
+                                <div class="top-body d-flex">
+                                    <h3>Professional</h3>
+                                    <span class="plan-price">&euro; 12.00</span>
+                                    <span class="plan-pay">/mese</span>
+                                </div>
+                                <!-- /TOP-BODY -->
+                                <!-- CENTRE BODY -->
+                                <div class="centre-body d-flex">
+                                    <!-- utenti -->
+                                    <div class="users d-flex">
+                                        <div><i class="fa-solid fa-user"></i></div>
+                                        <div>1 utente</div>
+                                    </div>
+                                    <!-- archiviazione -->
+                                    <div class="storage d-flex">
+                                        <div><i class="fa-solid fa-folder"></i></div>
+                                        <div>5 TB di spazio di archiviazione sicuro</div>
+                                    </div>
+                                    <!-- sharing -->
+                                    <div class="share d-flex">
+                                        <div><i class="fa-solid fa-share-nodes"></i></div>
+                                        <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                    </div>
+
+                                    <!-- bottone prova gratis -->
+                                    <div class="d-flex">
+                                        <a href="#" class="btn btn-blue d-flex">Prova gratis per 30 giorni</a>
+                                    </div>
+                                    <!-- link acquista ora -->
+                                    <div class="buy-now">
+                                        <p>oppure <a href="#">acquista ora</a></p>
+                                    </div>
+                                    
+                                </div>
+                                <!-- /CENTRE BODY -->
+                                <!-- BOTTOM BODY -->
+                                <div class="bot-body d-flex">
+                                    <!-- linea grigia -->
+                                    <div class="grey-row"></div>
+
+                                    <!-- dettagli -->
+                                    <div class="details">
+                                        <h4>Punti Salienti del piano</h4>
+                                    </div>
+                                    
+                                </div>
+                                <!-- /BOTTOM BODY -->
                             </div>
                             <!-- MAIN CARD -->
                         </div>
