--- a/index.html
+++ b/index.html
@@ -480,17 +480,18 @@
                 </section>
                 <!------- /MAIN CONTAINER ------->
 
+                <!-- TODO: SVG BIANCHE -->
                     <!-- GALLERY -->
-                    <section class="gallery d-flex debug">
+                    <section class="gallery d-flex">
                         <!-- GALLERY LEFT -->
-                        <div class="glr-left box-gallery d-flex">
-                            <div class="square square-green">
+                        <div class="glr-side box-gallery d-flex">
+                            <div class="square square-green square-active">
                                 <img src="img/designit.svg" alt="designit">
                             </div>
                             <div class="square square-bordeaux">
                                 <img src="img/arizona_state_university.svg" alt="designit">
                             </div>
-                            <div class="square square-lightblue">
+                            <div class="square square-blue1">
                                 <img src="img/university_of_florida.svg" alt="designit">
                             </div>
                             <div class="square square-red1">
@@ -500,26 +501,29 @@
                         <!-- /GALLERY LEFT -->
                         <!-- GALLERY CENTRE -->
                         <div class="glr-centre box-gallery d-flex">
-                            <img src="img/designit.svg" alt="designit">
+                            <div class="box-designit border">
+                                <img src="img/designit.svg" alt="designit">
                             <!-- linea grigia -->
                             <div class="grey-row"></div>
                             <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
 
                             <p id="signature">Morten Thomsen, Global IT Lead</p>
+                            </div>
+                            
                         </div>
                         <!-- /GALLERY CENTRE -->
                         <!-- GALLERY RIGHT -->
-                        <div class="glr-left box-gallery d-flex">
-                            <div class="square square-green">
+                        <div class="glr-side box-gallery d-flex">
+                            <div class="square square-red2">
                                 <img src="img/world_bicycle_relief.svg" alt="designit">
                             </div>
-                            <div class="square square-bordeaux">
+                            <div class="square square-blue2">
                                 <img src="img/hearst_corp.svg" alt="designit">
                             </div>
-                            <div class="square square-lightblue">
+                            <div class="square square-blue3">
                                 <img src="img/lonely_planet.svg" alt="designit">
                             </div>
-                            <div class="square square-red1">
+                            <div class="square square-yellow">
                                 <img src="img/clear_channel.svg" alt="designit">
                             </div>
                         </div>
