[add] hover to faq

--- a/index.html
+++ b/index.html
@@ -555,18 +555,43 @@
 
                                 <!-- row 1 -->
                                 <div class="row-faq d-flex">
-                                    <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                                    <span><i class="fa-solid fa-chevron-down"></i></span>
+                                    <!-- blocco visibile -->
+                                    <div class="block-row d-flex">
+                                        <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                                    </div>
+                                    <!-- blocco nascosto -->
+                                    <div class="hidden-row">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam dolores, corrupti rem tempore voluptatum fugiat nemo quod maxime reprehenderit earum iure, aperiam quos quae!
+                                    </div>
                                 </div>
+                                    
+
+
                                 <!-- row 2 -->
                                 <div class="row-faq d-flex">
-                                    <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                                    <span><i class="fa-solid fa-chevron-down"></i></span>
+                                    <!-- blocco visibile -->
+                                    <div class="block-row d-flex">
+                                        <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                                    </div>
+                                    <!-- blocco nascosto -->
+                                    <div class="hidden-row">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam dolores, corrupti rem tempore voluptatum fugiat nemo quod maxime reprehenderit earum iure, aperiam quos quae!
+                                    </div>
                                 </div>
+
                                 <!-- row 3 -->
                                 <div class="row-faq d-flex">
-                                    <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                                    <span><i class="fa-solid fa-chevron-down"></i></span>
+                                    <!-- blocco visibile -->
+                                    <div class="block-row d-flex">
+                                        <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                                    </div>
+                                    <!-- blocco nascosto -->
+                                    <div class="hidden-row">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam dolores, corrupti rem tempore voluptatum fugiat nemo quod maxime reprehenderit earum iure, aperiam quos quae!
+                                    </div>
                                 </div>
                                 
                             </section>
