[fix] chevron hover in faq

--- a/index.html
+++ b/index.html
@@ -558,7 +558,10 @@
                                     <!-- blocco visibile -->
                                     <div class="block-row d-flex">
                                         <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                                        <span class="box-i">
+                                            <i class="fa-solid fa-chevron-down"></i>
+                                            <i class="fa-solid fa-chevron-up"></i>
+                                        </span>
                                     </div>
                                     <!-- blocco nascosto -->
                                     <div class="hidden-row">
@@ -573,7 +576,10 @@
                                     <!-- blocco visibile -->
                                     <div class="block-row d-flex">
                                         <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                                        <span class="box-i">
+                                            <i class="fa-solid fa-chevron-down"></i>
+                                            <i class="fa-solid fa-chevron-up"></i>
+                                        </span>
                                     </div>
                                     <!-- blocco nascosto -->
                                     <div class="hidden-row">
@@ -582,11 +588,14 @@
                                 </div>
 
                                 <!-- row 3 -->
-                                <div class="row-faq d-flex">
+                                <div class="row-faq   last-row d-flex">
                                     <!-- blocco visibile -->
                                     <div class="block-row d-flex">
                                         <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                                        <span class="box-i">
+                                            <i class="fa-solid fa-chevron-down"></i>
+                                            <i class="fa-solid fa-chevron-up"></i>
+                                        </span>
                                     </div>
                                     <!-- blocco nascosto -->
                                     <div class="hidden-row">
